add movements to mockups

--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@
         </div>
 
         <div>
-            <p>--------------------About me-------------------</p>
+            <p class="line">--------------------About me-------------------</p>
         </div>
 
         <div>
@@ -105,13 +105,20 @@
 
         <div>
             <h2>Some delightful moments I’d like to share with you...</h2>
-            <img src="images/Omee.png">
-            <img src="images/Sunflower.png">
-            <img src="images/Cockatoo.png">
-            <img src="images/Sunrise.png">
-            <img src="images/TielsInDandenong.png">
-            <img src="images/CockatooShadow.png">
+
+        <div class="grid-container-img">
+            <img src="images/sunset.png">
+            <img src="images/sunflower.png">
+            <img src="images/sunrise.png"> 
         </div>
+
+            <div class="grid-container-img">
+                <img src="images/cockatoo.png">
+                <img src="images/goose.png">
+                <img src="images/omee.png">
+            </div>
+        </div>
+
 
         <footer>
             <p class="line">-------------------------------------------------------------------</p>
@@ -126,16 +133,15 @@
                 </div>
                 
                 <div class="inline-block">
-                    <img src="images/footer-logo.png" alt="Desktop Mockup" class="scalable" onclick="document.location='index.html'">
+                    <img src="images/footer-logo.png" alt="Desktop Mockup" class="scalable">
                 </div>
     
                 <div class="inline-block">
                     <ul>
-                        <li class="inline-block footer-link-green">LinkedIn</li>
-                        <li class="inline-block footer-link-orange">Email</li>
-                        <li class="inline-block footer-link-green">Instagram</li>
+                        <li class="inline-block footer-link-green" onclick="document.location='https://www.linkedin.com/in/jozhourexy/'">LinkedIn</li>
+                        <li class="inline-block footer-link-green" onclick="document.location='https://www.instagram.com/sgreentime/'">Instagram</li>
                         <li class="inline-block footer-link-blue">Behance</li>
-                        <li class="inline-block footer-link-orange">Github</li>
+                        <li class="inline-block footer-link-orange" onclick="document.location='https://github.com/J000Zhou'">Github</li>
                     </ul>
                 </div>
             </div>
